--- a/_textos/fotos-txt.html
+++ b/_textos/fotos-txt.html
@@ -1,14 +1,36 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
 
-[AQUI ENTRA UMA FOTO]
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <title> Tudo sobre Google Glass</title>
+    <link rel="stylesheet" href="_css/estilo.css" />
+</head>
+<script src="_javascript/funcoes.js"></script>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+
+
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+        </header>
 
 Glass > Fotos
 Galeria de Imagens do Google Glass
@@ -24,6 +46,11 @@ Veja na nossa galeria de fotos várias belas imagens que mostram algumas das pri
 - Vários tipos de lente
 - Informações importantes
 
-Copyright 2013 - by Gustavo Guanabara
+<footer id="rodape">
+    <p>Copyright &copy; 2013 - by Gustavo Guanabara
+       <br> <a href="http://facebook.com.br/" target="_blank">Facebook</a> | <a href="http://twitter.com.br" target="_blank">Twitter</a></a></p>
+</footer>
+</div>
+</body>
 
-Facebook | Twitter
+</html>
