--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,47 +1,135 @@
-Google Glass
-A revolução do Google está chegando
-
-[AQUI ENTRA UMA FOTO]
-
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
-
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
-
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
-
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+﻿<!DOCTYPE html>
 
 
-[BOTÃO ENVIAR]
+<html lang="pt-br">
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<head>
+    <meta charset="UTF-8">
+    <title> Tudo sobre Google Glass</title>
+    <link rel="stylesheet" href="_css/estilo.css" />
+    <link rel="stylesheet" href="_css/form.css" />
+</head>
+<script src="_javascript/funcoes.js"></script>
+<script>
+    function calcTotal() {
+        var qtd = parseInt(document.getElementById("cQtd").value);
+        var tot = (qtd * 1500);
+        document.getElementById("cTot").value = tot;
+    }
+</script>
+
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+
+
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Fale Conosco > Contato</h3>
+                        <h1>Formulário de Contato</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="de">Atualizado em 23/Abril/2013</h3>
+                    </hgroup>
+                </header>
+            </article>
+        </section>
+
+
+        <form method="POST" id="fContato" action="mailto:phaell_@hotmail.com" oninput="calcTotal();">
+            <fieldset id="usuario">
+                <legend>Identificação do Usuário</legend>
+                <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="25" maxlength="30"
+                        placeholder="Nome Completo" /></p>
+                <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="8"
+                        maxlenght="8" placeholder="Senha" /></p>
+                <p><label for="cMail">E-mail</label> <input type="email" name="tMail" id="cMail" size="20"
+                        maxlength="30" placeholder="email@email.com" /></p>
+                <fieldset id="sexo">
+                    <legend>Sexo</legend>
+                    <input type="radio" name="tSexo" id="cMasc" /><label for="cMasc">Masculino</label><br>
+                    <input type="radio" name="tSexo" id="cFem" /><label for="cFem">Feminino</label>
+                </fieldset>
+                <p><input type="date" name="tName" id="cName">Data de Nascimento</p>
+            </fieldset>
+
+            <fieldset id="endereco">
+                <legend>Endereço do Usuário</legend>
+                <p><label for="cRua">Logradouro: </label><input type="text" name="tRua" id="cRua" size="20"
+                        maxlenght="80" placeholder="Rua, Av, Trav, ..." /></p>
+                <p><label for="cNum">Número:</label> <input type="number" name="tNum" id="cNum" size="12" maxlenght="10"
+                        min="0" max="9999" placeholder="123, 345.." /></p>
+                <p><label for="cEst">Estado:</label>
+                    <select name="tEst" id="cEst">
+                        <option selected>Minas Gerais</option>
+                        <option>Rio de Janeiro</option>
+                        <option>São Paulo</option>
+                        <option>Paraná</option>
+                        <option>Santa Catarina</option>
+                        <option>Espirito Santo</option>
+                    </select>
+                </p>
+                <p><label for="cCid">Cidade: </label><input type="text" name="tCid" id="cCid" maxlength="40" size="20"
+                        placeholder="Sua Cidade" list="cidades" /> </p>
+                <datalist id="cidades">
+                    <option value="Uberlândia"></option>
+                    <option value="Araguari"></option>
+                    <option value="Uberaba"></option>
+                    <option value="Ituiutaba"></option>
+                </datalist>
+            </fieldset>
+
+            <fieldset id="mensagem">
+                <legend>Mensagem do Usuário</legend>
+                <p><label for="cUrg">Grau de Urgência:</label>
+                    Min<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2" />Max</p>
+                <p><label for="cMsg">Mensagem:</label><textarea name="tMsg" id="cMsg" cols="45" rows="5"
+                        placeholder="Deixe Aqui sua Mensagem"></textarea></p>
+            </fieldset>
+
+            <fieldset id="pedido">
+                <legend>Quero um Google Glass</legend>
+                <p><input type="checkbox" name="tPed" id="cPed" checked />
+                    <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label>
+                </p>
+                <p><label for="cCor">Cor: </label> <input type="color" name="tCor" id="cCor" value="black" /></p>
+                <p><label for="cQtd">Quantidade: </label><input type="number" name="tQtd" id="cQt" min="0" max="5"> </p>
+                <p><label for="cTot">Preço Total: R$ </label><input type="number" name="tTot" id="cTot"
+                        placeholder="Total a pagar" readonly /></p>
+            </fieldset>
+
+            <input type="image" name="tEnviar" src="_imagens/botao-enviar.png" />
+        </form>
+        <footer id="rodape">
+            <p>Copyright &copy; 2013 - by Gustavo Guanabara
+                <br> <a href="http://facebook.com.br/" target="_blank">Facebook</a> | <a href="http://twitter.com.br"
+                    target="_blank">Twitter</a></a>
+            </p>
+        </footer>
+    </div>
+</body>
+
+</html>
